syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

package hackathon;
option go_package = "./;hackathon";

service HackathonService {
  // command
  rpc AddHackathon (AddHackathonRequest) returns (AddHackathonResponse) {
    option (google.api.http) = {
      post: "/api/v1/hackathon"
      body: "*"
    };
  }
  rpc CloseHackathon (CloseHackathonRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/api/v1/hackathon/{id}"
    };
  }
  rpc AddHackathonParticipant (AddHackathonParticipantRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/api/v1/hackathon/{id}/participant"
      body: "*"
    };
  }

  // query
  rpc GetHackathons (google.protobuf.Empty) returns (HackathonsResponse) {
    option (google.api.http) = {
      get: "/api/v1/hackathons"
    };
  }
  rpc GetHackathonParticipants (HackathonParticipantsRequest) returns (HackathonParticipantsResponse) {
    option (google.api.http) = {
      get: "/api/v1/hackathon/{id}/participants"
    };
  }
}

message AddHackathonRequest {
  string code = 1;
  string name = 2;
  string type = 3;
}

message AddHackathonResponse {
  string id = 1;
}

message CloseHackathonRequest {
  string id = 1;
}

message AddHackathonParticipantRequest {
  string id = 1;
  string hackathon_code = 2;
  string endpoint = 3;
  string name = 4;
}

message HackathonsResponse {
  message Hackathon {
    string id = 1;
    string name = 2;
    int32 participants = 3;
    string type = 4;
    string created_at = 5;
    string closed_at = 6;
  }
  repeated Hackathon items = 1;
}

message HackathonParticipantsRequest {
  string id = 1;
}

message HackathonParticipantsResponse {
  message Participant {
    string id = 1;
    string name = 2;
    int32 score = 3;
    string created_at = 4;
    string scored_at = 5;
  }
  repeated Participant items = 1;
}